# ChangeLog of Nadoka($Rev$)
# $Id$ 
#

2005-05-26(Thu) 22:11:48 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/autodumpbot.nb, plugins/sixamobot.nb :
	change copyright year


2005-05-26(Thu) 22:07:15 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/config.rb : fix a bug


2005-05-26(Thu) 21:51:10 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc : change default quit message


2005-05-26(Thu) 21:45:49 +0900  Koichi Sasada  <ko1@atdot.net>

	* nadokarc : fix ACL comment


2005-05-26(Thu) 21:42:29 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/backlogbot.nb : fix configuration example


2005-05-26(Thu) 21:24:50 +0900  Koichi Sasada  <ko1@atdot.net>

	* log/.deleteme : remove


2005-05-26(Thu) 21:23:03 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/weatherbot.nb : add parentheses

	* plugins/rss_checkbot.nb : add configuration :over_message


2005-05-26(Thu) 21:03:24 +0900  Koichi Sasada  <ko1@atdot.net>

	* some files : change copyright year


2005-05-26(Thu) 20:52:32 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/googlebot.nb : fix plural support bug


2005-05-26(Thu) 20:27:16 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/googlebot.nb : fix configuration example
	and support plural

	* plugins/rss_checkbot.nb : change bot_state format and
	separate rss check function

	* lib/rss_check.rb : return failed information if
	exception is raised


2005-05-26(Thu) 11:21:31 +0900  Koichi Sasada  <ko1@atdot.net>

	* ndk/bot.rb : some refactoring


2005-05-26(Thu) 10:53:40 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/autoawaybot.nb : add configuration example
	and some refactoring


2005-05-26(Thu) 10:44:33 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/timestampbot.nb : add :client configuration
	(if true, output timestamp to clients. default: false)


2005-05-26(Thu) 10:37:29 +0900  Koichi Sasada  <ko1@atdot.net>

	* plugins/timestampbot.nb : fix configuration example


2005-05-26(Thu) 10:29:16 +0900  Koichi Sasada  <ko1@atdot.net>
