@@ -134,7 +134,7 @@ module Nadoka
       end
       
       send_reply Rpl.rpl_welcome( nick,
-        'Welcome to the Internet Relay Network'+"#{nick}! #{@username}@#{@remote_host}")
+        'Welcome to the Internet Relay Network '+"#{nick}!#{@username}@#{@remote_host}")
       send_reply Rpl.rpl_yourhost(nick, "Your host is nadoka, running version #{NDK_Version}")
       send_reply Rpl.rpl_created( nick, 'This server was created ' + NDK_Created.asctime)
       send_reply Rpl.rpl_myinfo(  nick, "nadoka #{NDK_Version} aoOirw abeiIklmnoOpqrstv")
